# bigquery-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  INSPECTOR_GUIDE.md  LICENSE  README.md  TROUBLESHOOTING.md  debug_server.py  pyproject.toml  server.py  test_bigquery_public.py  test_real.py  test_server.py
.claude/: settings.local.json
.claude/agents/: mcp-server-architect.md
.devcontainer/: devcontainer.json
